--- a/ZenseProject/videoCall/templates/home.html
+++ b/ZenseProject/videoCall/templates/home.html
@@ -1,46 +1,11 @@
 {% extends 'layout.html' %} 
 
-{% load static %}
-
-{% block title %} Home {% endblock %} 
+{% block title %} Home {% endblock title %}
 
 {% block content %} 
 
-<main>
-    <section id="form-container">
-<img src="{% static 'images/icon.png' %}" id="logo"/>
-<div id="welcome-message">
-    <h1>Welcome</h1>
-    <p>Group video calling app</p>
-</div>
-
-<form id="form">
-    <div class="form-field">
-        <label>Room: </label>
-        <input type="text" name="room" />
-    </div>
-    <div class="form-field">
-        <input type="submit" value="Join Stream"/>
-    </div>
-</form>
-</section>
-</main>
-
-<script type="text/javascript">
-    let form=document.getElementById('form')
-    let handleSubmit=async(e)=>{
-        e.preventDefault()
-        let room=e.target.room.value
-        let response= await fetch(`get_token/?channel=${room}`)
-        let data=await response.json()
-        let UID=data.uid 
-        let token=data.token
-        sessionStorage.setItem('UID',UID)
-        sessionStorage.setItem('token',token)
-        sessionStorage.setItem('room',room)
-        window.open('/room/','_self')
-    }
-    form.addEventListener('submit',handleSubmit)
-</script>
+{% for group in groups %} 
+<a href="{% url 'lobby' group=group.name %}"><p>{{group.name}}</p></a>
+{% endfor %}
 
 {% endblock content %}
