--- a/ZenseProject/videoCall/templates/room.html
+++ b/ZenseProject/videoCall/templates/room.html
@@ -5,7 +5,7 @@
 {% block content %} 
 <main>
     <section id="room-name-wrapper">
-        <p>Room Name:<span id="room-name"></span></p>
+        <p>Room Name:<span id="room-name">{{room}}</span></p>
     </section>
 
     <section id="video-streams"> </section>
