--- a/ZenseProject/liveEdit/templates/doc.html
+++ b/ZenseProject/liveEdit/templates/doc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Live Editor</title>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
 <body>
@@ -14,38 +14,20 @@
             theme: 'snow'
         });
 
-        let url =`ws://${window.location.host}/ws/doc/`
+        let url =`ws://${window.location.host}/ws/doc/Trial/Doc/`
         const socket=new WebSocket(url)
 
         socket.onmessage=function(event){
             const data = JSON.parse(event.data);
-            quill.setContents(data.content);
+            quill.updateContents(data.delta);
 
         }
 
         quill.on('text-change', function(delta, oldDelta, source) {
              if (source === 'user') {
-                 socket.send(JSON.stringify({ content: quill.getContents() }));
+                socket.send(JSON.stringify({ delta: delta }));
              }
          });
-
-        // const socket = new WebSocket(`ws://127.0.0.1/ws/doc/1/`);
-
-        // socket.onmessage = function(event) {
-        //     try {
-        //         const data = JSON.parse(event.data);
-        //         quill.setContents(data.content);
-        //     } catch (error) {
-        //         console.error('Error parsing JSON:', error);
-        //     }
-        // };
-
-        // quill.on('text-change', function(delta, oldDelta, source) {
-        //     if (source === 'user') {
-        //         socket.send(JSON.stringify({ content: quill.getContents() }));
-        //     }
-        // });
-
     </script>
 </body>
 </html>
