--- a/ZenseProject/liveEdit/templates/doc.html
+++ b/ZenseProject/liveEdit/templates/doc.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Editor</title>
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
+
 <body>
     <div id="editor"></div>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script>
-        let url=`ws://${window.location.host}/ws/doc/Trial/Doc/`
-        const socket= new WebSocket(url)
-        socket.onmessage=function(e){
-            let data=JSON.parse(e.data)
-            console.log('Data: ',data)
-        }
+        var quill = new Quill('#editor', {
+            theme: 'snow'
+        });
+
+
+        let url = `ws://${window.location.host}/ws/doc/Trial/Doc/`
+        const socket = new WebSocket(url)
+
+        socket.onmessage = function (e) {
+            try {
+                let data = JSON.parse(e.data);
+                quill.setText(data.content,'api');
+                
+                console.log(data.content);
+            } catch (error) {
+                console.error("Error while processing data:", error);
+            }
+        };
     </script>
 
 </body>
+
 </html>
