--- a/ZenseProject/static/styles/main.css
+++ b/ZenseProject/static/styles/main.css
@@ -104,3 +104,46 @@ body{
 #leave-btn{
 background-color: rgb(255,80,80,1);
 }
+
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    /* Style the dropdown button */
+    .dropbtn {
+        background-color: #007BFF;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+    /* Style the dropdown content */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    /* Style the dropdown links */
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+    /* Change color on hover */
+    .dropdown-content a:hover {
+        background-color: #f1f1f1;
+    }
+
+    /* Show the dropdown content when the button is hovered over */
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
