--- a/ZenseProject/videoCall/templates/home.html
+++ b/ZenseProject/videoCall/templates/home.html
@@ -1,11 +1,43 @@
-{% extends 'layout.html' %} 
+{% extends 'layout.html' %}
 
 {% block title %} Home {% endblock title %}
 
-{% block content %} 
+{% block style %}
+<style>
+    .card {
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 10px;
+        margin: 10px;
+        margin-left: 100px;
+        margin-right: 100px;
+        text-align: center;
+        background-color: #f7f7f7;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: transform 0.2s;
+    }
 
-{% for group in groups %} 
-<a href="{% url 'lobby' group=group.name %}"><p>{{group.name}}</p></a>
+    .card:hover {
+        transform: translateY(-5px);
+    }
+
+    .card a {
+        text-decoration: none;
+        color: #333;
+    }
+</style>
+{% endblock style %}
+
+{% block content %}
+
+{% for group in groups %}
+<div class="card">
+    <a href="{% url 'videoCall:lobby' group=group.name %}"><h2>{{ group.name }}</h2></a>
+    
+    {% for doc in group.doc.all %}
+    <a href="{% url 'liveEdit:doc' group=group.name doc=doc.name %}">{{ doc.name }}</a>
+    {% endfor %}
+</div>
 {% endfor %}
 
 {% endblock content %}
