--- a/ZenseProject/videoCall/templates/login.html
+++ b/ZenseProject/videoCall/templates/login.html
@@ -3,16 +3,22 @@
 {% block title %} Login {% endblock title %}
 
 {% block content %} 
-<form action="" method="post">
-    {% csrf_token %} 
-    <label>username: </label>
-    <input type="text" name="username" required/>
-    <label>password: </label>
-    <input type="password" name="password" required/>
-    <button type="submit">Login</button>
-</form>
+ 
+<div style="width: 300px; margin-top: 200px;margin-left: 600px; padding: 20px; border: 1px solid #ccc; border-radius: 5px;">
+    <h2>Login</h2>
+    <form action="" method="post">
+        {% csrf_token %} 
+        <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username" required/><br><br>
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password" required/><br><br>
+        <button type="submit" style="background-color: #007BFF; color: white; border: none; padding: 10px 20px; border-radius: 3px; cursor: pointer;">Login</button>
+    </form>
 
-{% if error_message %}
-    <p>{{ error_message }}</p>
-{% endif %}
+    {% if error_message %}
+        <p style="color: red;">{{ error_message }}</p>
+    {% endif %}
+
+    <p>Don't have an account? <a href="{% url 'videoCall:signup' %}" style="color: #007BFF;">Sign up</a></p>
+</div>
 {% endblock content %}
