--- a/ZenseProject/videoCall/templates/signup.html
+++ b/ZenseProject/videoCall/templates/signup.html
@@ -1,17 +1,25 @@
- 
-<form action="" method="post">
-    {% csrf_token %}
-    <label>username </label>
-    <input type="text" name="username" required/> 
-    <label>password </label>
-    <input type="password" name="password" required/> 
-    <button type="submit">Signup</button>
-</form>
+<div
+    style="width: 300px; margin-top: 200px;margin-left: 600px; padding: 20px; border: 1px solid #ccc; border-radius: 5px;">
+    <h2>SignUp</h2>
+    <form action="" method="post">
+        {% csrf_token %}
+        <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username" required /><br><br>
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password" required /><br><br>
+        <label for="confirm_password">Confirm password:</label><br>
+        <input type="password" id="password" name="confirm_password" required /><br><br>
+        <button type="submit"
+            style="background-color: #007BFF; color: white; border: none; padding: 10px 20px; border-radius: 3px; cursor: pointer;">SignUp</button>
+    </form>
 
-{% if messages %}
+    {% if messages %}
     <ul class="messages">
         {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
+        <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+            {% endfor %}
     </ul>
-{% endif %}
+    {% endif %}
+
+    <p>Already have an account? <a href="{% url 'videoCall:login' %}" style="color: #007BFF;">Login</a></p>
+</div>
