--- a/ZenseProject/liveEdit/templates/doc.html
+++ b/ZenseProject/liveEdit/templates/doc.html
@@ -28,6 +28,8 @@
 
 <body>
     <a href="#" class="goBack" onclick="goBack()">Go Back</a>
+    <div id="outputArea"></div>
+    <button id="runCode">Run Code</button>
     <div id="editor"></div>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script>
@@ -54,8 +56,8 @@
 
         var quill = new Quill('#editor', {
             theme: 'snow',
-            modules:{
-                toolbar:toolbarOptions
+            modules: {
+                toolbar: toolbarOptions
             }
         });
 
@@ -88,6 +90,15 @@
         function goBack() {
             window.history.back();
         }
+
+        const runCodeButton = document.getElementById('runCode');
+        runCodeButton.addEventListener('click', function () {
+            const codeOps = quill.getContents().ops;
+            socket.send(JSON.stringify({
+                code: codeOps
+            }));
+            console.log("content ",codeOps);
+        });
     </script>
 
 </body>
