--- a/ZenseProject/liveEdit/templates/doc.html
+++ b/ZenseProject/liveEdit/templates/doc.html
@@ -36,46 +36,70 @@
 </style>
 
 <body>
-    <h1>
-        <div class="hidden" id="room">{{Room}}</div>
-        <div class="hidden" id="doc">{{Doc}}</div>
-    </h1>
+    <div class="hidden">
+        <h1>
+            <div id="room">{{Room.name}}</div>
+            <div id="doc">{{Doc}}</div>
+            <div id="setting">{{Room.setting}}</div>
+            {% if Room.setting=="ADMIN"}
+            <div id="is_admin">
+                {% if profile in admin.all %}admin
+                {% else %}member
+                {% endif %}
+            </div>
+            {% endif %}
+        </h1>
+    </div>
+
     <a href="#" class="goBack" onclick="goBack()">Go Back</a>
     <div id="outputArea"></div>
+    {% if Room.setting=="ADMIN" %}
     <button id="runCode">Run Code</button>
+    {% endif %}
     <div id="editor"></div>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script>
-        let toolbarOptions = [
-            ['bold', 'italic', 'underline', 'strike'],        // toggled buttons
-            ['blockquote', 'code-block'],
-
-            [{ 'header': 1 }, { 'header': 2 }],               // custom button values
-            [{ 'list': 'ordered' }, { 'list': 'bullet' }],
-            [{ 'script': 'sub' }, { 'script': 'super' }],      // superscript/subscript
-            [{ 'indent': '-1' }, { 'indent': '+1' }],          // outdent/indent
-            [{ 'direction': 'rtl' }],                         // text direction
-
-            [{ 'size': ['small', false, 'large', 'huge'] }],  // custom dropdown
-            [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
-
-            [{ 'color': [] }, { 'background': [] }],          // dropdown with defaults from theme
-            [{ 'font': [] }],
-            [{ 'align': [] }],
-
-            ['clean']                                         // remove formatting button
-        ];
-
-
-        var quill = new Quill('#editor', {
-            theme: 'snow',
-            modules: {
-                toolbar: toolbarOptions
-            }
-        });
-
         const room = document.getElementById("room").textContent
         const doc = document.getElementById("doc").textContent
+        const setting = document.getElementById("setting").textContent
+
+        if (setting === "ADMIN" && document.getElementById("is_admin").textContent==="member") {
+            var quill = new Quill('#editor', {
+                theme: 'snow',
+                readOnly:true,
+                modules: {
+                    toolbar: false
+                }
+            });
+        }
+        else {
+            let toolbarOptions = [
+                ['bold', 'italic', 'underline', 'strike'],        // toggled buttons
+                ['blockquote', 'code-block'],
+
+                [{ 'header': 1 }, { 'header': 2 }],               // custom button values
+                [{ 'list': 'ordered' }, { 'list': 'bullet' }],
+                [{ 'script': 'sub' }, { 'script': 'super' }],      // superscript/subscript
+                [{ 'indent': '-1' }, { 'indent': '+1' }],          // outdent/indent
+                [{ 'direction': 'rtl' }],                         // text direction
+
+                [{ 'size': ['small', false, 'large', 'huge'] }],  // custom dropdown
+                [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
+
+                [{ 'color': [] }, { 'background': [] }],          // dropdown with defaults from theme
+                [{ 'font': [] }],
+                [{ 'align': [] }],
+
+                ['clean']                                         // remove formatting button
+            ];
+            var quill = new Quill('#editor', {
+                theme: 'snow',
+                modules: {
+                    toolbar: toolbarOptions
+                }
+            });
+        }
+
         let url = `ws://${window.location.host}/ws/doc/${room}/${doc}/`
         const socket = new WebSocket(url)
 
