--- a/ZenseProject/videoCall/templates/room.html
+++ b/ZenseProject/videoCall/templates/room.html
@@ -38,13 +38,49 @@
     background-color: rgb(38, 99, 197);
     color: #f9f9f9;
   }
+
+  /* Styles for the modal */
+  .modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  .modal-content {
+    background-color: white;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 </style>
 {% endblock %}
 
 {% block content %}
 <main>
   <section id="room-name-wrapper">
-    <p>Room Name:<span id="room-name">{{group.name}}</span></p>
+    <p>Room Name: <span id="room-name">{{group.name}}</span></p>
   </section>
 
   <div class="flex-container">
