--- a/ZenseProject/videoCall/templates/addDoc.html
+++ b/ZenseProject/videoCall/templates/addDoc.html
@@ -1,87 +1,18 @@
-{% extends 'layout.html' %}
+{% extends 'form_template.html' %} 
 
 {% block title %} Add Document {% endblock title %}
 
-{% block style %}
-<style>
-    a.goBack {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #3498db;
-        color: white;
-        text-decoration: none;
-        border-radius: 5px;
-        border: none;
-        cursor: pointer;
-    }
+{% block form %}
+<label for="add_document">Document name</label>
+<input required type="text" name="document" />
+<br><br>
 
-    /* Change color on hover */
-    a.goBack:hover {
-        background-color: #2980b9;
-    }
+<label for="document_setting">Access</label>
+<select name="setting">
+    <option value="ADMIN">Admins only</option>
+    <option value="EVERYONE" selected>All members</option>
+</select>
+<br><br>
 
-    body {
-        font-family: Arial, sans-serif;
-    }
-
-    form {
-        width: 300px;
-        margin: 0 auto;
-        padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    label {
-        font-weight: bold;
-        display: block;
-        margin-bottom: 5px;
-    }
-
-    input[type="text"] {
-        width: 90%;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-    }
-
-    button {
-        background-color: #007BFF;
-        color: white;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 3px;
-        cursor: pointer;
-    }
-
-    button:hover {
-        background-color: #0056b3;
-    }
-</style>
-{% endblock style %}
-
-{% block content %}
-<a href="#" class="goBack" onclick="goBack()">Go Back</a>
-
-<form action="" method="post">
-    {% csrf_token %}
-    <label for="add_document">Document name</label>
-    <input required type="text" name="document" />
-
-    <label for="document_setting">Access</label>
-    <select name="setting">
-        <option value="ADMIN">Admins only</option>
-        <option value="EVERYONE" selected>All members</option>
-      </select>
-
-    <button type="submit">Add Document</button>
-</form>
-
-<script>
-    function goBack() {
-        window.history.back();
-    }
-</script>
-
-{% endblock content %}
+<button type="submit">Add Document</button>
+{% endblock form %}
