--- a/ZenseProject/videoCall/templates/layout.html
+++ b/ZenseProject/videoCall/templates/layout.html
@@ -9,6 +9,12 @@
 
     <link rel='stylesheet' type='text/css' media='screen' href="{% static 'styles/main.css' %}"">
 
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
+
     {% block style %} {% endblock style %}
 </head>
 
