--- a/ZenseProject/videoCall/templates/recording.html
+++ b/ZenseProject/videoCall/templates/recording.html
@@ -1,8 +1,8 @@
-{% extends 'layout.html' %} 
+{% extends 'layout.html' %}
 
 {% block title %} Recording {% endblock title %}
 
-{% block style %} 
+{% block style %}
 <style>
     body {
         font-family: 'Arial', sans-serif;
@@ -15,6 +15,13 @@
         max-width: 1200px;
         margin: 0 auto;
         padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        max-height: 600px;
+        /* Adjust the value to fit your screen */
     }
 
     header {
@@ -24,39 +31,44 @@
         text-align: center;
     }
 
-    /* Update header text color */
     header h1 {
         color: #fff;
     }
 
+    h1,
+    h2,
+    h3 {
+        color: #333;
+    }
+
     main {
+        width: 1200px;
         background-color: #fff;
         padding: 20px;
         border-radius: 5px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    h1, h2, h3 {
-        color: #333;
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     .video-container {
         position: relative;
         overflow: hidden;
-        padding-top: 31.25%;
+        padding-top: 40.25%;
+        /* Adjust to maintain the aspect ratio (15:10) */
     }
 
     .video {
-        position: absolute;
-        top: 0;
-        left: 0;
         width: 100%;
         height: 100%;
+        object-fit: contain;
     }
 </style>
 {% endblock style %}
 
-{% block content %} 
+{% block content %}
 <div class="container">
     <header>
         <h1>Recording Page</h1>
@@ -65,7 +77,7 @@
         <h2>Recording Name</h2>
         <p>{{ record }}</p>
         <div class="video-container">
-            <video controls poster="path/to/thumbnail.jpg">
+            <video controls poster="{{group.icon.url}}" class="video">
                 <source src="{{url}}" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
