--- a/ZenseProject/videoCall/templates/recording.html
+++ b/ZenseProject/videoCall/templates/recording.html
@@ -5,83 +5,37 @@
 {% block style %}
 <style>
     body {
-        font-family: 'Arial', sans-serif;
-        background-color: #f9f9f9;
+        font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-    }
-
-    .container {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        min-height: 100vh;
-        max-height: 600px;
-        /* Adjust the value to fit your screen */
+        height: 100vh;
+        background-color: #f2f2f2;
     }
 
-    header {
-        background-color: #333;
-        color: #fff;
-        padding: 10px 0;
+    h1 {
+        margin-bottom: 20px;
         text-align: center;
-    }
-
-    header h1 {
-        color: #fff;
-    }
-
-    h1,
-    h2,
-    h3 {
         color: #333;
     }
 
-    main {
-        width: 1200px;
-        background-color: #fff;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        height: 500px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-
-    .video-container {
-        position: relative;
-        overflow: hidden;
-        padding-top: 40.25%;
-        /* Adjust to maintain the aspect ratio (15:10) */
-    }
-
     .video {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
+        max-width: 100%;
+        height: auto;
+        display: block;
     }
 </style>
 {% endblock style %}
 
 {% block content %}
-<div class="container">
-    <header>
-        <h1>Recording Page</h1>
-    </header>
-    <main>
-        <h2>Recording Name</h2>
-        <p>{{ record }}</p>
-        <div class="video-container">
-            <video controls poster="{{group.icon.url}}" class="video">
-                <source src="{{url}}" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-    </main>
+<h1>{{record}}</h1>
+<div class="video-container">
+    <video controls poster="{{group.icon.url}}" class="video">
+        <source src="{{url}}" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </div>
 {% endblock content %}
