--- a/ZenseProject/videoCall/templates/home.html
+++ b/ZenseProject/videoCall/templates/home.html
@@ -112,7 +112,8 @@
         background-color: rgba(163, 157, 157, 0.31);
         /* Use rgba format with transparency */
     }
-    .images{
+
+    .images {
         padding-left: 50px;
     }
 </style>
@@ -163,9 +164,18 @@
                 <h3> Members </h3>
                 <hr>
                 {% for member in group.user_profile.all %}
+
+                {% if group in member.admin.all %}
+
+                <p style="color: #ced1d4;">{{ member.user.username }}
+                {% else %}
                 <p>{{ member.user.username }}
+                {% endif %}
+
                     {% if group in profile.admin.all %}
-                    <a class="images" href="{% url 'videoCall:remove_member' group=group.name member=member.user.username %}"><img src="{% static 'images/remove.png' %}" height="20px" width="20px"></a>
+                    <a class="images"
+                        href="{% url 'videoCall:remove_member' group=group.name member=member.user.username %}"><img
+                            src="{% static 'images/remove.png' %}" height="20px" width="20px"></a>
                     {% endif %}
                 </p>
                 {% endfor %}
