--- a/ZenseProject/videoCall/templates/addGroup.html
+++ b/ZenseProject/videoCall/templates/addGroup.html
@@ -8,10 +8,14 @@
 <br><br>
 
 <label for="group_setting">Access</label>
-<select name="setting">
+<select required name="setting">
     <option value="ADMIN">Admins only</option>
     <option value="EVERYONE" selected>All members</option>
 </select>
 <br><br>
+
+<label for="group_icon">Group icon: </label>
+<input type="file" name="icon">
+
 <button type="submit">Create Group</button>
 {% endblock form %}
