--- a/ZenseProject/videoCall/templates/form_template.html
+++ b/ZenseProject/videoCall/templates/form_template.html
@@ -66,7 +66,7 @@
 
 <a href="#" class="goBack" onclick="goBack()">Go Back</a>
 
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% block form %}
     
