--- a/ZenseProject/videoCall/templates/home.html
+++ b/ZenseProject/videoCall/templates/home.html
@@ -132,12 +132,22 @@
         <a href="{% url 'videoCall:lobby' group=group.name %}" class="group">
             <h2>{{ group.name }}</h2>
         </a>
+        {% if group in profile.admin.all %}
         <div class="add-member-link">
             <a href="{% url 'videoCall:addMember' group=group.name %}">Add Member</a>
         </div>
+        {% endif %} 
+
+        {% if group.setting == "EVERYONE" %}
         <div class="add-doc-link">
             <a href="{% url 'videoCall:addDoc' group=group.name %}">Create Document</a>
         </div>
+        {% elif group in profile.admin.all %} 
+        <div class="add-doc-link">
+            <a href="{% url 'videoCall:addDoc' group=group.name %}">Create Document</a>
+        </div>
+
+        {% endif %}
 
         <br>
 
@@ -172,12 +182,12 @@
                 <p>{{ member.user.username }}
                 {% endif %}
 
-                    {% if group in profile.admin.all %}
+                    {% if group in profile.admin.all  or member == profile %}
                     <a class="images"
                         href="{% url 'videoCall:remove_member' group=group.name member=member.user.username %}"><img
                             src="{% static 'images/remove.png' %}" height="20px" width="20px"></a>
-                    {% endif %}
                 </p>
+                {% endif %}
                 {% endfor %}
             </div>
         </div>
