--- a/ZenseProject/videoCall/templates/home.html
+++ b/ZenseProject/videoCall/templates/home.html
@@ -83,7 +83,7 @@
         color: #155724;
     }
 
-    .group h2 {
+    .group {
         margin: 0;
         padding: 10px;
         background-color: #007BFF;
@@ -129,9 +129,12 @@
 
     {% for group in groups %}
     <div class="card">
-        <a href="{% url 'videoCall:lobby' group=group.name %}" class="group">
-            <h2>{{ group.name }}</h2>
-        </a>
+        <div class="group">
+            <img src="{{group.icon.url}}" height="40px" width="40px">
+            <a href="{% url 'videoCall:lobby' group=group.name %}">
+                <h2>{{ group.name }}</h2>
+            </a>
+        </div>
         {% if group in profile.admin.all %}
         <div class="add-member-link">
             <a href="{% url 'videoCall:addMember' group=group.name %}">Add Member</a>
@@ -166,8 +169,9 @@
                 <h3> Recording </h3>
                 {% for rec in group.records.all %}
                 <a href="{% url 'videoCall:view_recording' group=group.name record=rec.name %}">{{rec.name}}</a>
-                {% if rec in profile.recordings.all %} 
-                <a href="{% url 'videoCall:edit_recording' group=group recording=rec.name %}" class="images"><img src="{% static 'images/edit.png' %}" height="20px" width="20px"></a>
+                {% if rec in profile.recordings.all %}
+                <a href="{% url 'videoCall:edit_recording' group=group recording=rec.name %}" class="images"><img
+                        src="{% static 'images/edit.png' %}" height="20px" width="20px"></a>
                 {% endif %}
                 <br>
                 {% endfor %}
